--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "natali_catcher"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 django = "^4.1.3"
+googletrans = "3.1.0a0"
+pillow = "^9.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
