--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,15 @@ description = ""
 license = "BSD 3-Clause License"
 authors = ["Valeriy Kirichenko <https://github.com/valeriy-kirichenko>"]
 readme = "README.md"
-packages = [{include = "natali_catcher"}]
+packages = [{include = "dom_u_gnoma"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
 django = "^4.1.3"
 googletrans = "3.1.0a0"
 pillow = "^9.3.0"
+djlint = "^1.19.7"
+django-debug-toolbar = "^3.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
