--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,12 @@ django = "^4.1.3"
 googletrans = "3.1.0a0"
 pillow = "^9.3.0"
 djlint = "^1.19.7"
-django-debug-toolbar = "^3.7.0"
+sorl-thumbnail = "^12.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
+django-debug-toolbar = "^3.7.0"
 
 [build-system]
 requires = ["poetry-core"]
