--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ googletrans = "3.1.0a0"
 pillow = "^9.3.0"
 djlint = "^1.19.7"
 sorl-thumbnail = "^12.9.0"
+python-dotenv = "^0.21.0"
 
 
 [tool.poetry.group.dev.dependencies]
