--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,36 @@
-asgiref==3.5.2 ; python_version >= "3.9" and python_version < "4.0" \
-    --hash=sha256:1d2880b792ae8757289136f1db2b7b99100ce959b2aa57fd69dab783d05afac4 \
-    --hash=sha256:4a29362a6acebe09bf1d6640db38c1dc3d9217c68e6f9f6204d72667fc19a424
-django==4.1.3 ; python_version >= "3.9" and python_version < "4.0" \
-    --hash=sha256:678bbfc8604eb246ed54e2063f0765f13b321a50526bdc8cb1f943eda7fa31f1 \
-    --hash=sha256:6b1de6886cae14c7c44d188f580f8ba8da05750f544c80ae5ad43375ab293cd5
-sqlparse==0.4.3 ; python_version >= "3.9" and python_version < "4.0" \
-    --hash=sha256:0323c0ec29cd52bceabc1b4d9d579e311f3e4961b98d174201d5622a23b85e34 \
-    --hash=sha256:69ca804846bb114d2ec380e4360a8a340db83f0ccf3afceeb1404df028f57268
-tzdata==2022.6 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32" \
-    --hash=sha256:04a680bdc5b15750c39c12a448885a51134a27ec9af83667663f0b3a1bf3f342 \
-    --hash=sha256:91f11db4503385928c15598c98573e3af07e7229181bee5375bd30f1695ddcae
+asgiref==3.5.2 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2022.9.24 ; python_version >= "3.9" and python_version < "4.0"
+chardet==3.0.4 ; python_version >= "3.9" and python_version < "4.0"
+click==8.1.3 ; python_version >= "3.9" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0"
+cssbeautifier==1.14.7 ; python_version >= "3.9" and python_version < "4.0"
+django==4.1.3 ; python_version >= "3.9" and python_version < "4.0"
+djlint==1.19.7 ; python_version >= "3.9" and python_version < "4.0"
+editorconfig==0.12.3 ; python_version >= "3.9" and python_version < "4.0"
+googletrans==3.1.0a0 ; python_version >= "3.9" and python_version < "4.0"
+h11==0.9.0 ; python_version >= "3.9" and python_version < "4.0"
+h2==3.2.0 ; python_version >= "3.9" and python_version < "4.0"
+hpack==3.0.0 ; python_version >= "3.9" and python_version < "4.0"
+hstspreload==2022.11.1 ; python_version >= "3.9" and python_version < "4.0"
+html-tag-names==0.1.2 ; python_version >= "3.9" and python_version < "4.0"
+html-void-elements==0.1.0 ; python_version >= "3.9" and python_version < "4.0"
+httpcore==0.9.1 ; python_version >= "3.9" and python_version < "4.0"
+httpx==0.13.3 ; python_version >= "3.9" and python_version < "4.0"
+hyperframe==5.2.0 ; python_version >= "3.9" and python_version < "4.0"
+idna==2.10 ; python_version >= "3.9" and python_version < "4.0"
+importlib-metadata==5.0.0 ; python_version >= "3.9" and python_version < "4.0"
+jsbeautifier==1.14.7 ; python_version >= "3.9" and python_version < "4.0"
+pathspec==0.10.1 ; python_version >= "3.9" and python_version < "4.0"
+pillow==9.3.0 ; python_version >= "3.9" and python_version < "4.0"
+python-dotenv==0.21.0 ; python_version >= "3.9" and python_version < "4.0"
+pyyaml==6.0 ; python_version >= "3.9" and python_version < "4.0"
+regex==2022.10.31 ; python_version >= "3.9" and python_version < "4.0"
+rfc3986==1.5.0 ; python_version >= "3.9" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
+sniffio==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
+sorl-thumbnail==12.9.0 ; python_version >= "3.9" and python_version < "4.0"
+sqlparse==0.4.3 ; python_version >= "3.9" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.9" and python_version < "3.11"
+tqdm==4.64.1 ; python_version >= "3.9" and python_version < "4.0"
+tzdata==2022.6 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
+zipp==3.10.0 ; python_version >= "3.9" and python_version < "4.0"
